apps/kube/rows/manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: rows
    labels:
        name: rows
